--- a/executor/packages/core/package.json
+++ b/executor/packages/core/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "better-result": "^2.7.0",
-    "graphql": "^16.12.0"
+    "graphql": "^16.12.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "typescript": "^5.9.3"
