--- a/executor/packages/runner-sandbox-host/package.json
+++ b/executor/packages/runner-sandbox-host/package.json
@@ -19,6 +19,7 @@
     "@executor/database": "workspace:*",
     "agentfs-sdk": "^0.6.0",
     "better-result": "^2.7.0",
-    "convex": "^1.31.7"
+    "convex": "^1.31.7",
+    "zod": "^3.25.76"
   }
 }
