--- a/executor/packages/database/package.json
+++ b/executor/packages/database/package.json
@@ -11,7 +11,8 @@
     "@convex-dev/rate-limiter": "^0.3.2",
     "convex": "^1.31.7",
     "convex-helpers": "^0.1.111",
-    "sql.js": "^1.14.0"
+    "sql.js": "^1.14.0",
+    "zod": "^3.25.76"
   },
   "main": "./convex/_generated/api.js",
   "types": "./convex/_generated/api.d.ts"
