--- a/v2/apps/convex/package.json
+++ b/v2/apps/convex/package.json
@@ -3,6 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "typecheck": "bunx tsc --noEmit -p tsconfig.json"
+    "dev": "bunx convex dev",
+    "typecheck": "bunx tsc --noEmit -p tsconfig.json",
+    "convex:codegen": "bunx convex codegen"
+  },
+  "dependencies": {
+    "@executor-v2/mcp-gateway": "workspace:*",
+    "@executor-v2/persistence-convex": "workspace:*",
+    "convex": "^1.31.7"
   }
 }
