--- a/v2/packages/mcp-gateway/package.json
+++ b/v2/packages/mcp-gateway/package.json
@@ -2,7 +2,14 @@
   "name": "@executor-v2/mcp-gateway",
   "private": true,
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "zod": "^4.3.6"
   }
 }
