feat: enhance PM and OpenAPI integration with source credential management
- Added support for managing source credentials in OpenAPI execution, allowing for dynamic header injection based on source configuration.
- Introduced new tools for adding, listing, and removing sources within the PM context.
- Updated the approval client to handle new PM configuration paths.
- Enhanced error handling in local and deno subprocess runners to include detailed output from tool calls.
- Updated documentation to reflect new features and changes in source management.

--- a/v2/apps/pm/package.json
+++ b/v2/apps/pm/package.json
@@ -8,8 +8,13 @@
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@effect/platform-bun": "^0.86.0",
     "@executor-v2/engine": "workspace:*",
     "@executor-v2/mcp-gateway": "workspace:*",
+    "@executor-v2/persistence-local": "workspace:*",
+    "@executor-v2/persistence-ports": "workspace:*",
+    "@executor-v2/schema": "workspace:*",
+    "@executor-v2/source-manager": "workspace:*",
     "effect": "^3.19.8"
   }
 }
