feat: wire v2 execute and callback flows through shared run services

--- a/v2/apps/convex/package.json
+++ b/v2/apps/convex/package.json
@@ -4,13 +4,22 @@
   "type": "module",
   "scripts": {
     "dev": "bunx convex dev",
+    "test": "bunx vitest run --no-watch convex/*.test.ts",
     "typecheck": "bunx tsc --noEmit -p tsconfig.json",
     "convex:codegen": "bunx convex codegen"
   },
   "dependencies": {
+    "@executor-v2/confect": "workspace:*",
+    "@executor-v2/engine": "workspace:*",
     "@executor-v2/mcp-gateway": "workspace:*",
     "@executor-v2/persistence-convex": "workspace:*",
     "@executor-v2/sdk": "workspace:*",
-    "convex": "catalog:"
+    "convex": "catalog:",
+    "effect": "catalog:"
+  },
+  "devDependencies": {
+    "@effect/vitest": "catalog:",
+    "convex-test": "^0.0.41",
+    "vitest": "catalog:"
   }
 }
