--- a/v2/apps/pm/package.json
+++ b/v2/apps/pm/package.json
@@ -9,6 +9,8 @@
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@effect/platform": "catalog:",
+    "@effect/platform-bun": "^0.86.0",
     "@executor-v2/engine": "workspace:*",
     "@executor-v2/mcp-gateway": "workspace:*",
     "@executor-v2/sdk": "workspace:*",
