feat: add auth-ready actor and schema foundations
Introduce an Actor service contract in domain, wire PM/Convex runtime callbacks through credential-aware tool invocation, and expand v2 schemas for organizations, memberships, and scoped source credential bindings while removing legacy credential refs.

--- a/v2/packages/domain/package.json
+++ b/v2/packages/domain/package.json
@@ -9,6 +9,7 @@
     "typecheck": "bunx tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@executor-v2/schema": "workspace:*",
     "@executor-v2/sdk": "workspace:*",
     "effect": "catalog:"
   }
