--- a/v2/apps/convex/package.json
+++ b/v2/apps/convex/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@executor-v2/confect": "workspace:*",
     "@executor-v2/control-plane": "workspace:*",
+    "@executor-v2/domain": "workspace:*",
     "@executor-v2/engine": "workspace:*",
     "@executor-v2/mcp-gateway": "workspace:*",
     "@executor-v2/schema": "workspace:*",
